allowing users to pick their own word

--- a/pogchamp.html
+++ b/pogchamp.html
@@ -9,6 +9,7 @@
     <div class="pogchamp_title">
       <h1>PogChampion</h1>
       <p class="pogchamp_desc">Choose your PogChampion</p>
+      <input id="word" type="text" placeholder="PogChampion"><br><br>
     </div>
     <input class="pogchampion" type="file" accept="image/*"><br>
     <div class="pogchamp_img">
