added functionality to toggle on/off the extension

--- a/pogchamp.html
+++ b/pogchamp.html
@@ -10,6 +10,8 @@
       <h1>PogChampion</h1>
       <p class="pogchamp_desc">Choose your PogChampion</p>
       <!-- <input id="word" type="text" placeholder="PogChampion"><br><br> -->
+      <input id="pogchampToggle" name="pogchampToggle" type="checkbox" >
+      <label for="pogchampToggle">Replace PogChamp</label><br><br>
     </div>
     <input class="pogchampion" type="file" accept="image/*"><br>
     <div class="pogchamp_img">
